seaqt/QtGui/gen_qmovie.nim

import ./Qt6Gui_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt6Gui")  & " -fPIC"
{.compile("gen_qmovie.cpp", cflags).}


type QMovieMovieStateEnum* = distinct cint
template NotRunning*(_: type QMovieMovieStateEnum): untyped = 0
template Paused*(_: type QMovieMovieStateEnum): untyped = 1
template Running*(_: type QMovieMovieStateEnum): untyped = 2


type QMovieCacheModeEnum* = distinct cint
template CacheNone*(_: type QMovieCacheModeEnum): untyped = 0
template CacheAll*(_: type QMovieCacheModeEnum): untyped = 1


import ./gen_qmovie_types
export gen_qmovie_types

import
  ../QtCore/gen_qcoreevent_types,
  ../QtCore/gen_qiodevice_types,
  ../QtCore/gen_qmetaobject_types,
  ../QtCore/gen_qobject,
  ../QtCore/gen_qobjectdefs_types,
  ../QtCore/gen_qrect_types,
  ../QtCore/gen_qsize_types,
  ./gen_qcolor_types,
  ./gen_qimage_types,
  ./gen_qpixmap_types
export
  gen_qcoreevent_types,
  gen_qiodevice_types,
  gen_qmetaobject_types,
  gen_qobject,
  gen_qobjectdefs_types,
  gen_qrect_types,
  gen_qsize_types,
  gen_qcolor_types,
  gen_qimage_types,
  gen_qpixmap_types

type cQMovie*{.exportc: "QMovie", incompleteStruct.} = object

proc fcQMovie_new(): ptr cQMovie {.importc: "QMovie_new".}
proc fcQMovie_new2(device: pointer): ptr cQMovie {.importc: "QMovie_new2".}
proc fcQMovie_new3(fileName: struct_miqt_string): ptr cQMovie {.importc: "QMovie_new3".}
proc fcQMovie_new4(parent: pointer): ptr cQMovie {.importc: "QMovie_new4".}
proc fcQMovie_new5(device: pointer, format: struct_miqt_string): ptr cQMovie {.importc: "QMovie_new5".}
proc fcQMovie_new6(device: pointer, format: struct_miqt_string, parent: pointer): ptr cQMovie {.importc: "QMovie_new6".}
proc fcQMovie_new7(fileName: struct_miqt_string, format: struct_miqt_string): ptr cQMovie {.importc: "QMovie_new7".}
proc fcQMovie_new8(fileName: struct_miqt_string, format: struct_miqt_string, parent: pointer): ptr cQMovie {.importc: "QMovie_new8".}
proc fcQMovie_metaObject(self: pointer, ): pointer {.importc: "QMovie_metaObject".}
proc fcQMovie_metacast(self: pointer, param1: cstring): pointer {.importc: "QMovie_metacast".}
proc fcQMovie_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QMovie_metacall".}
proc fcQMovie_tr(s: cstring): struct_miqt_string {.importc: "QMovie_tr".}
proc fcQMovie_supportedFormats(): struct_miqt_array {.importc: "QMovie_supportedFormats".}
proc fcQMovie_setDevice(self: pointer, device: pointer): void {.importc: "QMovie_setDevice".}
proc fcQMovie_device(self: pointer, ): pointer {.importc: "QMovie_device".}
proc fcQMovie_setFileName(self: pointer, fileName: struct_miqt_string): void {.importc: "QMovie_setFileName".}
proc fcQMovie_fileName(self: pointer, ): struct_miqt_string {.importc: "QMovie_fileName".}
proc fcQMovie_setFormat(self: pointer, format: struct_miqt_string): void {.importc: "QMovie_setFormat".}
proc fcQMovie_format(self: pointer, ): struct_miqt_string {.importc: "QMovie_format".}
proc fcQMovie_setBackgroundColor(self: pointer, color: pointer): void {.importc: "QMovie_setBackgroundColor".}
proc fcQMovie_backgroundColor(self: pointer, ): pointer {.importc: "QMovie_backgroundColor".}
proc fcQMovie_state(self: pointer, ): cint {.importc: "QMovie_state".}
proc fcQMovie_frameRect(self: pointer, ): pointer {.importc: "QMovie_frameRect".}
proc fcQMovie_currentImage(self: pointer, ): pointer {.importc: "QMovie_currentImage".}
proc fcQMovie_currentPixmap(self: pointer, ): pointer {.importc: "QMovie_currentPixmap".}
proc fcQMovie_isValid(self: pointer, ): bool {.importc: "QMovie_isValid".}
proc fcQMovie_lastError(self: pointer, ): cint {.importc: "QMovie_lastError".}
proc fcQMovie_lastErrorString(self: pointer, ): struct_miqt_string {.importc: "QMovie_lastErrorString".}
proc fcQMovie_jumpToFrame(self: pointer, frameNumber: cint): bool {.importc: "QMovie_jumpToFrame".}
proc fcQMovie_loopCount(self: pointer, ): cint {.importc: "QMovie_loopCount".}
proc fcQMovie_frameCount(self: pointer, ): cint {.importc: "QMovie_frameCount".}
proc fcQMovie_nextFrameDelay(self: pointer, ): cint {.importc: "QMovie_nextFrameDelay".}
proc fcQMovie_currentFrameNumber(self: pointer, ): cint {.importc: "QMovie_currentFrameNumber".}
proc fcQMovie_speed(self: pointer, ): cint {.importc: "QMovie_speed".}
proc fcQMovie_scaledSize(self: pointer, ): pointer {.importc: "QMovie_scaledSize".}
proc fcQMovie_setScaledSize(self: pointer, size: pointer): void {.importc: "QMovie_setScaledSize".}
proc fcQMovie_cacheMode(self: pointer, ): cint {.importc: "QMovie_cacheMode".}
proc fcQMovie_setCacheMode(self: pointer, mode: cint): void {.importc: "QMovie_setCacheMode".}
proc fcQMovie_started(self: pointer, ): void {.importc: "QMovie_started".}
proc fcQMovie_connect_started(self: pointer, slot: int) {.importc: "QMovie_connect_started".}
proc fcQMovie_resized(self: pointer, size: pointer): void {.importc: "QMovie_resized".}
proc fcQMovie_connect_resized(self: pointer, slot: int) {.importc: "QMovie_connect_resized".}
proc fcQMovie_updated(self: pointer, rect: pointer): void {.importc: "QMovie_updated".}
proc fcQMovie_connect_updated(self: pointer, slot: int) {.importc: "QMovie_connect_updated".}
proc fcQMovie_stateChanged(self: pointer, state: cint): void {.importc: "QMovie_stateChanged".}
proc fcQMovie_connect_stateChanged(self: pointer, slot: int) {.importc: "QMovie_connect_stateChanged".}
proc fcQMovie_error(self: pointer, error: cint): void {.importc: "QMovie_error".}
proc fcQMovie_connect_error(self: pointer, slot: int) {.importc: "QMovie_connect_error".}
proc fcQMovie_finished(self: pointer, ): void {.importc: "QMovie_finished".}
proc fcQMovie_connect_finished(self: pointer, slot: int) {.importc: "QMovie_connect_finished".}
proc fcQMovie_frameChanged(self: pointer, frameNumber: cint): void {.importc: "QMovie_frameChanged".}
proc fcQMovie_connect_frameChanged(self: pointer, slot: int) {.importc: "QMovie_connect_frameChanged".}
proc fcQMovie_start(self: pointer, ): void {.importc: "QMovie_start".}
proc fcQMovie_jumpToNextFrame(self: pointer, ): bool {.importc: "QMovie_jumpToNextFrame".}
proc fcQMovie_setPaused(self: pointer, paused: bool): void {.importc: "QMovie_setPaused".}
proc fcQMovie_stop(self: pointer, ): void {.importc: "QMovie_stop".}
proc fcQMovie_setSpeed(self: pointer, percentSpeed: cint): void {.importc: "QMovie_setSpeed".}
proc fcQMovie_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QMovie_tr2".}
proc fcQMovie_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QMovie_tr3".}
proc fQMovie_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QMovie_virtualbase_metaObject".}
proc fcQMovie_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QMovie_override_virtual_metaObject".}
proc fQMovie_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QMovie_virtualbase_metacast".}
proc fcQMovie_override_virtual_metacast(self: pointer, slot: int) {.importc: "QMovie_override_virtual_metacast".}
proc fQMovie_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QMovie_virtualbase_metacall".}
proc fcQMovie_override_virtual_metacall(self: pointer, slot: int) {.importc: "QMovie_override_virtual_metacall".}
proc fQMovie_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QMovie_virtualbase_event".}
proc fcQMovie_override_virtual_event(self: pointer, slot: int) {.importc: "QMovie_override_virtual_event".}
proc fQMovie_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QMovie_virtualbase_eventFilter".}
proc fcQMovie_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QMovie_override_virtual_eventFilter".}
proc fQMovie_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QMovie_virtualbase_timerEvent".}
proc fcQMovie_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QMovie_override_virtual_timerEvent".}
proc fQMovie_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QMovie_virtualbase_childEvent".}
proc fcQMovie_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QMovie_override_virtual_childEvent".}
proc fQMovie_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QMovie_virtualbase_customEvent".}
proc fcQMovie_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QMovie_override_virtual_customEvent".}
proc fQMovie_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QMovie_virtualbase_connectNotify".}
proc fcQMovie_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QMovie_override_virtual_connectNotify".}
proc fQMovie_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QMovie_virtualbase_disconnectNotify".}
proc fcQMovie_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QMovie_override_virtual_disconnectNotify".}
proc fcQMovie_staticMetaObject(): pointer {.importc: "QMovie_staticMetaObject".}
proc fcQMovie_delete(self: pointer) {.importc: "QMovie_delete".}


func init*(T: type gen_qmovie_types.QMovie, h: ptr cQMovie): gen_qmovie_types.QMovie =
  T(h: h)
proc create*(T: type gen_qmovie_types.QMovie, ): gen_qmovie_types.QMovie =
  gen_qmovie_types.QMovie.init(fcQMovie_new())

proc create*(T: type gen_qmovie_types.QMovie, device: gen_qiodevice_types.QIODevice): gen_qmovie_types.QMovie =
  gen_qmovie_types.QMovie.init(fcQMovie_new2(device.h))

proc create*(T: type gen_qmovie_types.QMovie, fileName: string): gen_qmovie_types.QMovie =
  gen_qmovie_types.QMovie.init(fcQMovie_new3(struct_miqt_string(data: fileName, len: csize_t(len(fileName)))))

proc create*(T: type gen_qmovie_types.QMovie, parent: gen_qobject_types.QObject): gen_qmovie_types.QMovie =
  gen_qmovie_types.QMovie.init(fcQMovie_new4(parent.h))

proc create*(T: type gen_qmovie_types.QMovie, device: gen_qiodevice_types.QIODevice, format: seq[byte]): gen_qmovie_types.QMovie =
  gen_qmovie_types.QMovie.init(fcQMovie_new5(device.h, struct_miqt_string(data: cast[cstring](if len(format) == 0: nil else: unsafeAddr format[0]), len: csize_t(len(format)))))

proc create*(T: type gen_qmovie_types.QMovie, device: gen_qiodevice_types.QIODevice, format: seq[byte], parent: gen_qobject_types.QObject): gen_qmovie_types.QMovie =
  gen_qmovie_types.QMovie.init(fcQMovie_new6(device.h, struct_miqt_string(data: cast[cstring](if len(format) == 0: nil else: unsafeAddr format[0]), len: csize_t(len(format))), parent.h))

proc create*(T: type gen_qmovie_types.QMovie, fileName: string, format: seq[byte]): gen_qmovie_types.QMovie =
  gen_qmovie_types.QMovie.init(fcQMovie_new7(struct_miqt_string(data: fileName, len: csize_t(len(fileName))), struct_miqt_string(data: cast[cstring](if len(format) == 0: nil else: unsafeAddr format[0]), len: csize_t(len(format)))))

proc create*(T: type gen_qmovie_types.QMovie, fileName: string, format: seq[byte], parent: gen_qobject_types.QObject): gen_qmovie_types.QMovie =
  gen_qmovie_types.QMovie.init(fcQMovie_new8(struct_miqt_string(data: fileName, len: csize_t(len(fileName))), struct_miqt_string(data: cast[cstring](if len(format) == 0: nil else: unsafeAddr format[0]), len: csize_t(len(format))), parent.h))
